5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1723_2499.log
== TEST (2019-05-09 11:35:04) 
-- CODE:
from math import*

k = int(input("valor de x:"))
i = 0

while(i < k):
	soma = soma + factorial(k)*i 
	i = i + 1
	
print(round(k,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = soma + factorial(k)*i 
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:35:25) 
-- CODE:
from math import*

k = int(input("valor de x:"))
i = 0
soma = 0

while(i < k):
	soma = soma + factorial(k)*i 
	i = i + 1
	
print(round(k,8))
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:36:25) 
-- CODE:
from math import*

k = int(input("valor de x:"))
i = 0
soma = 1

while(i < k):
	soma = soma + factorial(k)*i 
	i = i + 1
	
print(round(k,8))
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:37:43) 
-- CODE:
from math import*

k = int(input("valor de x:"))
i = 0
soma = 0

while(i < k):
	soma = soma + factorial(k)
	i = i + 1
	
print(round(k,8))
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:40:48) 
-- CODE:
from math import*

k = int(input("valor de x:"))
soma = 1
i = 1
while(i < k):
	soma = soma + (1/factorial(k))
	i = i + 1
	
print(round(k,8))
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:41:35) 
-- CODE:
from math import*

k = int(input("valor de x:"))
soma = 1
i = 1
while(i < k):
	soma = soma + (1/factorial(i))
	i = i + 1
	
print(round(soma,8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:41:41) 
-- CODE:
from math import*

k = int(input("valor de x:"))
soma = 1
i = 1
while(i < k):
	soma = soma + (1/factorial(i))
	i = i + 1
	
print(round(soma,8))
-- EXECUTION TIME:
0.190177
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
